# T-VectorDB

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark_metadata.txt  benchmark_output.txt  benchmark_v3.txt  build.rs  clippy_errors.txt  debug_output.txt  mid.md  recall_results.txt  validation_metadata.txt
.github/workflows/: ci.yml
clients/python/: README.md  setup.py
clients/python/examples/: quickstart.py
clients/python/tvectordb/: __init__.py  client.py  tvectordb_pb2.py  tvectordb_pb2_grpc.py
clients/python/tvectordb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
proto/: tvectordb.proto
src/: api_server.rs  execution_engine.rs  grpc_server.rs  hnsw.rs  lib.rs  main.rs  storage_engine.rs  turbo_math.rs
